<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello World</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_enable_bluetooth">Enable Bluetooth</string>

    <string name="countdown_timer_text">Changes Propagated In\n%1$d %2$s</string>

    <string name="dialog_enable_bluetooth_message">Beacon alerts require that you have Bluetooth enabled. Enable it now?</string>
    <string name="dialog_enable_bluetooth_title">Enable Bluetooth?</string>

    <string name="label_location">LOCATION</string>
    <string name="label_push">PUSH</string>

    <string name="no_pending_alarms">No Pending Alarms</string>

    <string name="notification_title">Marketing Cloud Updated</string>
    <string name="notification_body">Update sent at %1$s has been propagated.</string>

    <string name="togglebtn_disable_location">Not Watching</string>
    <string name="togglebtn_disable_push">Disabled</string>
    <string name="togglebtn_enable_location">Watching</string>
    <string name="togglebtn_enable_push">Enabled</string>
    <string name="label_proximity">PROXIMITY</string>
    <string name="togglebtn_disable_proximity">Not Watching</string>
    <string name="togglebtn_enable_proximity">Watching</string>

</resources>
