<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:id="@+id/tv_pushHeader"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:text="@string/label_push"
                android:textSize="28sp" />


            <ToggleButton
                android:id="@+id/toggle_enablePush"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textOff="@string/togglebtn_disable_push"
                android:textOn="@string/togglebtn_enable_push" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="1">


            <TextView
                android:id="@+id/tv_locationHeader"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:text="@string/label_location"
                android:textSize="28sp" />


            <ToggleButton
                android:id="@+id/toggle_enableLocation"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textOff="@string/togglebtn_disable_location"
                android:textOn="@string/togglebtn_enable_location" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_countdown_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="24sp"
        tools:text="Changes Propagated In\n900 seconds" />

</RelativeLayout>
